Support TogetherAI as new model provider

--- a/locales/ar/common.json
+++ b/locales/ar/common.json
@@ -106,6 +106,7 @@
     "oneapi": "وان آبي آي",
     "openai": "أوبن إيه آي",
     "openrouter": "OpenRouter",
+    "togetherai": "TogetherAI",
     "perplexity": "Perplexity",
     "zhipu": "Zhipu"
   },
