--- a/locales/ko-KR/common.json
+++ b/locales/ko-KR/common.json
@@ -106,6 +106,7 @@
     "oneapi": "One API",
     "openai": "OpenAI",
     "openrouter": "오픈 라우터",
+    "togetherai": "TogetherAI",
     "perplexity": "Perplexity",
     "zhipu": "지푸 AI"
   },
