--- a/locales/ja-JP/common.json
+++ b/locales/ja-JP/common.json
@@ -106,6 +106,7 @@
     "oneapi": "One API",
     "openai": "OpenAI",
     "openrouter": "OpenRouter",
+    "togetherai": "TogetherAI",
     "perplexity": "Perplexity AI",
     "zhipu": "智譜AI"
   },
