--- a/locales/tr-TR/common.json
+++ b/locales/tr-TR/common.json
@@ -106,6 +106,7 @@
     "oneapi": "One API",
     "openai": "OpenAI",
     "openrouter": "AçıkYönlendirici",
+    "togetherai": "TogetherAI",
     "perplexity": "Perplexity",
     "zhipu": "Zhipu AI"
   },
