📝 docs: Add docs seo

--- a/docs/self-hosting/advanced/authentication.zh-CN.mdx
+++ b/docs/self-hosting/advanced/authentication.zh-CN.mdx
@@ -1,3 +1,8 @@
+---
+title: LobeChat 外部身份验证服务配置指南
+description: 了解如何配置外部身份验证服务以统一管理用户授权，支持 Auth0 和 Microsoft Entra ID。
+tags: '身份验证服务, 外部身份验证, SSO, Auth0, Microsoft Entra ID, NextAuth.js'
+---
 # 身份验证服务
 
 LobeChat 支持配置外部身份验证服务，供企业 / 组织内部使用，统一管理用户授权。
