--- a/docs/self-hosting/advanced/sso-providers/auth0.mdx
+++ b/docs/self-hosting/advanced/sso-providers/auth0.mdx
@@ -1,3 +1,14 @@
+---
+title: Configure Auth0 Identity Verification Service
+description: >-
+  Learn how to create an Auth0 application, add users, and configure environment
+  variables for deploying LobeChat with Auth0 identity verification. Connect to
+  existing single sign-on services and configure social login for advanced
+  settings.
+tags: >-
+  Auth0, Identity Verification, SSO, Single Sign-On, Environment Variables, User
+  Management, Social Login, Advanced Configuration
+---
 # Configure Auth0 Identity Verification Service
 
 <Steps>
