--- a/docs/self-hosting/advanced/sso-providers/microsoft-entra-id.mdx
+++ b/docs/self-hosting/advanced/sso-providers/microsoft-entra-id.mdx
@@ -1,3 +1,13 @@
+---
+title: Configuring Microsoft Entra ID Authentication Service
+description: >-
+  Learn how to create a Microsoft Entra ID application, add users, and configure
+  environment variables for deploying LobeChat with single sign-on (SSO) using
+  Microsoft Entra ID.
+tags: >-
+  Microsoft Entra ID, Authentication Service, Single Sign-On, Azure AD,
+  Environment Variables, LobeChat
+---
 # Configuration of Microsoft Entra ID Authentication Service
 
 <Steps>
