--- a/docs/self-hosting/advanced/upstream-sync.mdx
+++ b/docs/self-hosting/advanced/upstream-sync.mdx
@@ -1,3 +1,15 @@
+---
+title: >-
+  Upstream Sync: How to Enable Automatic Updates and Redeploy on Vercel and
+  Docker
+description: >-
+  Learn how to enable automatic updates on Vercel and upgrade the Docker
+  deployment version for LobeChat. Follow these steps to ensure accurate update
+  detection and seamless redeployment.
+tags: >-
+  Upstream Sync, Vercel Deployment, Docker Deployment, Automatic Updates,
+  Redeploy, LobeChat, Docker Image Upgrade
+---
 # Upstream Sync
 
 ## `A` Vercel / Zeabur Deployment
