--- a/docs/self-hosting/advanced/upstream-sync.zh-CN.mdx
+++ b/docs/self-hosting/advanced/upstream-sync.zh-CN.mdx
@@ -1,3 +1,8 @@
+---
+title: 启动自动更新 - Vercel / Zeabur 部署
+description: 按照指定步骤重新部署项目，启用自动更新并解决 Vercel 默认创建新项目导致的更新问题。
+tags: 'Vercel, Zeabur, 自动更新, 部署, Github Actions, Upstream Sync, Docker'
+---
 # 启动自动更新
 
 ## `A` Vercel / Zeabur 部署
