--- a/docs/self-hosting/environment-variables.mdx
+++ b/docs/self-hosting/environment-variables.mdx
@@ -1,3 +1,10 @@
+---
+title: Customize LobeChat Environment Variables for Deployment
+description: >-
+  Learn how to customize LobeChat's environment variables for deployment to
+  optimize its performance and functionality.
+tags: 'LobeChat, environment variables, deployment, configuration, customization'
+---
 # Environment Variables
 
 LobeChat provides some additional configuration options when deployed, which can be customized using environment variables.
