--- a/docs/self-hosting/environment-variables/analytics.mdx
+++ b/docs/self-hosting/environment-variables/analytics.mdx
@@ -1,3 +1,12 @@
+---
+title: Integrating Free/Open-Source Data Analytics Services in LobeChat
+description: >-
+  Explore the integration of Vercel Analytics, Google Analytics, PostHog
+  Analytics, and Umami Analytics in LobeChat for collecting user usage data.
+tags: >-
+  Data Analytics, Vercel Analytics, Google Analytics, PostHog Analytics, Umami
+  Analytics
+---
 # Data Statistics
 
 We have integrated several free/open-source data analytics services in LobeChat for collecting user usage data. Here are environment variables that you can use.
