--- a/docs/self-hosting/environment-variables/analytics.zh-CN.mdx
+++ b/docs/self-hosting/environment-variables/analytics.zh-CN.mdx
@@ -1,3 +1,12 @@
+---
+title: LobeChat 数据统计服务环境变量
+description: >-
+  了解 LobeChat 中集成的免费 / 开源数据统计服务的环境变量，包括 Vercel Analytics, Google Analytics,
+  Posthog Analytics, 和 Umami Analytics。
+tags: >-
+  LobeChat, 数据统计, 环境变量, Vercel Analytics, Google Analytics, Posthog Analytics,
+  Umami Analytics
+---
 # 数据统计
 
 我们在 LobeChat 中集成了若干免费 / 开源的数据统计服务，用于了解用户的使用情况，以下是相关环境变量。
