--- a/docs/self-hosting/environment-variables/basic.mdx
+++ b/docs/self-hosting/environment-variables/basic.mdx
@@ -1,3 +1,15 @@
+---
+title: Customize LobeChat Deployment with Environment Variables
+description: >-
+  Learn about the environment variables available for customizing LobeChat
+  deployment, including access code, OAuth SSO, base path, default agent
+  configuration, identity verification service settings, plugin service
+  settings, and assistant market settings.
+tags: >-
+  LobeChat, Environment Variables, Deployment, Access Code, OAuth SSO, Base
+  Path, Default Agent Configuration, Identity Verification Service, Plugin
+  Service, Assistant Market
+---
 # Environment Variables
 
 LobeChat provides some additional configuration options during deployment, which can be customized using environment variables.
