--- a/docs/self-hosting/environment-variables/model-provider.mdx
+++ b/docs/self-hosting/environment-variables/model-provider.mdx
@@ -1,3 +1,15 @@
+---
+title: Model Service Providers and Environment Variables for LobeChat
+description: >-
+  Explore the environment variables related to various model service providers
+  for LobeChat, including OpenAI, Azure OpenAI, ZHIPU AI, Moonshot AI, Google
+  AI, AWS Bedrock, Ollama, Perplexity AI, Anthropic AI, Mistral AI, Groq AI, and
+  OpenRouter AI.
+tags: >-
+  Model Service Providers, Environment Variables, LobeChat, OpenAI, Azure
+  OpenAI, ZHIPU AI, Moonshot AI, Google AI, AWS Bedrock, Ollama, Perplexity AI,
+  Anthropic AI, Mistral AI, Groq AI, OpenRouter AI
+---
 # Model Service Providers
 
 When deploying LobeChat, a rich set of environment variables related to model service providers is provided, allowing you to easily define the model service providers to be enabled in LobeChat.
