--- a/docs/self-hosting/examples/azure-openai.mdx
+++ b/docs/self-hosting/examples/azure-openai.mdx
@@ -1,3 +1,14 @@
+---
+title: >-
+  Configuring Azure OpenAI for LobeChat: Usage Limitations and Configuration
+  Steps
+description: >-
+  Learn how to configure Azure OpenAI for LobeChat, including usage limitations
+  and step-by-step configuration in the interface and during deployment.
+tags: >-
+  Azure OpenAI, LobeChat, Configuration, Usage Limitations, API Key, Azure API
+  Version
+---
 # Integrating with Azure OpenAI
 
 LobeChat supports using [Azure OpenAI][azure-openai-url] as the model service provider for OpenAI. This article will explain how to configure Azure OpenAI.
