--- a/docs/self-hosting/examples/ollama.mdx
+++ b/docs/self-hosting/examples/ollama.mdx
@@ -1,3 +1,12 @@
+---
+title: Integrating Ollama with LobeChat - Enhance Your Application
+description: >-
+  Learn how to configure and deploy LobeChat to use Ollama language models,
+  including running Ollama and LobeChat locally.
+tags: >-
+  Ollama integration, LobeChat deployment, local language models, LLM
+  integration
+---
 # Integrating with Ollama
 
 Ollama is a powerful framework for running large language models (LLMs) locally, supporting various language models including Llama 2, Mistral, and more. Now, LobeChat supports integration with Ollama, meaning you can easily use the language models provided by Ollama to enhance your application within LobeChat.
