--- a/docs/self-hosting/faq/no-v1-suffix.mdx
+++ b/docs/self-hosting/faq/no-v1-suffix.mdx
@@ -1,3 +1,12 @@
+---
+title: Troubleshooting Empty Response After Configuring OPENAI_PROXY_URL
+description: >-
+  Learn how to troubleshoot and resolve the issue of receiving an empty response
+  after configuring the OPENAI_PROXY_URL environment variable.
+tags: >-
+  OPENAI_PROXY_URL, environment variable, configuration, empty response,
+  troubleshooting
+---
 # Configuring `OPENAI_PROXY_URL` Environment Variable but Getting Empty Response
 
 ### Problem Description
