--- a/docs/self-hosting/faq/no-v1-suffix.zh-CN.mdx
+++ b/docs/self-hosting/faq/no-v1-suffix.zh-CN.mdx
@@ -1,3 +1,8 @@
+---
+title: 配置 OPENAI_PROXY_URL 环境变量返回值为空
+description: 重新检查并确认 OPENAI_PROXY_URL 是否设置正确，包括是否正确地添加了 /v1 后缀（如果需要），以解决 AI 返回消息为空的问题。
+tags: 'OPENAI_PROXY_URL, 环境变量配置, AI返回值为空, 代理服务器'
+---
 # 配置 `OPENAI_PROXY_URL` 环境变量但返回值为空
 
 ### 问题描述
