--- a/docs/self-hosting/faq/proxy-with-unable-to-verify-leaf-signature.mdx
+++ b/docs/self-hosting/faq/proxy-with-unable-to-verify-leaf-signature.mdx
@@ -1,3 +1,13 @@
+---
+title: How to Resolve UNABLE_TO_VERIFY_LEAF_SIGNATURE Error When Using Proxy
+description: >-
+  Learn how to bypass Node.js certificate validation to resolve
+  UNABLE_TO_VERIFY_LEAF_SIGNATURE error when using a proxy, and explore more
+  secure alternatives.
+tags: >-
+  UNABLE_TO_VERIFY_LEAF_SIGNATURE, Proxy, Node.js, Certificate Validation,
+  Security
+---
 # Encounter `UNABLE_TO_VERIFY_LEAF_SIGNATURE` Error When Using Proxy
 
 ## Problem Description
