--- a/docs/self-hosting/platform/docker-compose.mdx
+++ b/docs/self-hosting/platform/docker-compose.mdx
@@ -1,3 +1,12 @@
+---
+title: Docker Compose Deployment Guide - Deploy LobeChat with Docker
+description: >-
+  Learn how to deploy the LobeChat service using Docker Compose, including
+  installation, deployment commands, and optional automatic update script.
+tags: >-
+  Docker Compose, LobeChat, Docker Deployment, Automatic Update Script, Docker
+  Container Environment
+---
 # Docker Compose Deployment Guide
 
 <div style={{display:"flex", gap: 4}}>
