--- a/docs/self-hosting/platform/docker-compose.zh-CN.mdx
+++ b/docs/self-hosting/platform/docker-compose.zh-CN.mdx
@@ -1,3 +1,10 @@
+---
+title: Docker Compose 部署指引 - LobeChat 服务部署
+description: >-
+  使用 Docker 镜像在私有设备上部署 LobeChat 服务的详细指南，包括安装 Docker 容器环境、运行 Docker Compose
+  部署指令以及设置 Crontab 自动更新脚本。
+tags: 'Docker Compose, 部署指引, LobeChat, Docker 镜像, Crontab, 自动更新'
+---
 # Docker Compose 部署指引
 
 <div style={{display:"flex", gap: 4}}>
