--- a/docs/self-hosting/platform/docker.mdx
+++ b/docs/self-hosting/platform/docker.mdx
@@ -1,3 +1,13 @@
+---
+title: Deploy LobeChat Service with Docker | Step-by-Step Guide
+description: >-
+  Learn how to deploy the LobeChat service using Docker on your private device.
+  Follow the step-by-step instructions to start the service with one click and
+  ensure security measures.
+tags: >-
+  Docker Deployment, LobeChat Service, Docker Command, OpenAI API Key, Proxy
+  Configuration, Automatic Update Script
+---
 # Docker Deployment Guide
 
 <div style={{display:"flex", gap: 4}}>
