--- a/docs/self-hosting/platform/netlify.mdx
+++ b/docs/self-hosting/platform/netlify.mdx
@@ -1,3 +1,14 @@
+---
+title: Deploy LobeChat with Netlify - Step-by-Step Guide
+description: >-
+  Learn how to deploy LobeChat on Netlify with detailed step-by-step
+  instructions, including forking the repository, preparing the OpenAI API Key,
+  importing to Netlify workspace, configuring site name and environment
+  variables, waiting for deployment, and setting up a custom domain.
+tags: >-
+  Deploy LobeChat, Netlify Deployment, LobeChat Tutorial, OpenAI API Key, Custom
+  Domain Setup
+---
 # Deploy LobeChat with Netlify
 
 If you want to deploy LobeChat on Netlify, you can follow these steps:
