--- a/docs/self-hosting/platform/repocloud.mdx
+++ b/docs/self-hosting/platform/repocloud.mdx
@@ -1,3 +1,12 @@
+---
+title: Deploy LobeChat on RepoCloud - One-Click Deployment
+description: >-
+  Learn how to deploy LobeChat on RepoCloud with a one-click deployment process.
+  Start using LobeChat once deployed and optionally bind a custom domain.
+tags: >-
+  Deploy LobeChat, RepoCloud Deployment, One-Click Deployment, Custom Domain
+  Binding
+---
 # Deploy LobeChat with RepoCloud
 
 If you want to deploy LobeChat on RepoCloud, you can follow the steps below:
