--- a/docs/self-hosting/platform/sealos.mdx
+++ b/docs/self-hosting/platform/sealos.mdx
@@ -1,3 +1,10 @@
+---
+title: Deploy LobeChat on SealOS - Step-by-Step Guide
+description: >-
+  Learn how to deploy LobeChat on SealOS with ease. Follow the step-by-step
+  process to get started and use LobeChat for your communication needs.
+tags: 'Deploy LobeChat, SealOS Deployment, LobeChat Tutorial'
+---
 # Deploy LobeChat with SealOS
 
 If you want to deploy LobeChat on SealOS, you can follow the steps below:
