--- a/docs/self-hosting/platform/vercel.mdx
+++ b/docs/self-hosting/platform/vercel.mdx
@@ -1,3 +1,11 @@
+---
+title: Deploy LobeChat with Vercel - Step-by-Step Guide
+description: >-
+  Learn how to deploy LobeChat on Vercel with ease. Get your OpenAI API Key,
+  deploy the project, and start using it. Optionally, bind a custom domain for a
+  direct connection.
+tags: 'Deploy LobeChat, Vercel Deployment, OpenAI API Key, Custom Domain Binding'
+---
 # Deploy LobeChat with Vercel
 
 If you want to deploy LobeChat on Vercel, you can follow the steps below:
