--- a/docs/self-hosting/start.mdx
+++ b/docs/self-hosting/start.mdx
@@ -1,3 +1,15 @@
+---
+title: >-
+  Choose Your Deployment Platform for LobeChat - Docker, Vercel, Docker Compose,
+  and More
+description: >-
+  Explore the deployment platform options for LobeChat, including Docker,
+  Vercel, Docker Compose, and more. Choose the platform that best suits your
+  needs and preferences.
+tags: >-
+  LobeChat, Deployment Platform, Docker, Vercel, Docker Compose, Netlify,
+  RepoCloud, SealOS, Zeabur
+---
 # Build your own Lobe Chat
 
 Choose your favorite platform to get started.
