--- a/docs/self-hosting/start.zh-CN.mdx
+++ b/docs/self-hosting/start.zh-CN.mdx
@@ -1,3 +1,8 @@
+---
+title: 选择适合自己的部署平台 | 构建属于自己的 Lobe Chat
+description: 选择适合自己的部署平台，包括 Vercel、Docker 和 Docker Compose 等，进行 Lobe Chat 的部署。
+tags: 'Lobe Chat, 部署平台, Vercel, Docker, Docker Compose'
+---
 # 构建属于自己的 Lobe Chat
 
 选择自己喜爱的平台，构建属于自己的 Lobe Chat。
