--- a/docs/usage/agents/concepts.mdx
+++ b/docs/usage/agents/concepts.mdx
@@ -1,3 +1,11 @@
+---
+title: Understanding ChatGPT Topics and the Introduction of Agents in LobeChat
+description: >-
+  Explore the concept of topics in ChatGPT and the introduction of Agents in
+  LobeChat, providing a more efficient and organized approach to handling
+  various tasks and historical conversation records.
+tags: 'ChatGPT, LobeChat, Agents, Topics, Conversation Records, Efficient Interaction'
+---
 # Topics and Assistants
 
 ## ChatGPT and "Topics"
