--- a/docs/usage/agents/concepts.zh-CN.mdx
+++ b/docs/usage/agents/concepts.zh-CN.mdx
@@ -1,3 +1,8 @@
+---
+title: ChatGPT 与 LobeChat：话题与助手的交互模式对比
+description: 探讨了在 ChatGPT 中存在的话题模式的问题，并介绍了 LobeChat 中引入的助手概念，以及助手内部的话题索引方式，提高了用户交互的效率。
+tags: 'ChatGPT, LobeChat, 话题, 助手, 交互模式'
+---
 # 话题与助手
 
 ## ChatGPT 与「话题」
