--- a/docs/usage/agents/custom-agent.mdx
+++ b/docs/usage/agents/custom-agent.mdx
@@ -1,3 +1,13 @@
+---
+title: 'Adding and Iterating Assistants: A Comprehensive Guide'
+description: >-
+  Learn how to add assistants to your favorites list in LobeChat, either through
+  the role market or by creating custom assistants for specific tasks. Get
+  detailed instructions and tips for a seamless setup.
+tags: >-
+  LobeChat, assistant market, custom assistant, adding assistants, iterating
+  assistants, assistant setup
+---
 # Custom Assistant Guide
 
 As the basic functional unit of LobeChat, adding and iterating assistants is very important. Now you can add assistants to your favorites list in two ways.
