--- a/docs/usage/agents/custom-agent.zh-CN.mdx
+++ b/docs/usage/agents/custom-agent.zh-CN.mdx
@@ -1,3 +1,8 @@
+---
+title: 如何在 LobeChat 中添加和配置助手
+description: 了解如何通过角色市场添加常用助手或者创建自定义助手来解决特定任务，以及快捷设置技巧。
+tags: 'LobeChat, 添加助手, 自定义助手, 角色市场, 配置助手, 快捷设置'
+---
 # 自定义助手指南
 
 作为 LobeChat 的基础职能单位，助手的添加和迭代是非常重要的。现在你可以通过两种方式将助手添加到你的常用列表中
