--- a/docs/usage/agents/model.mdx
+++ b/docs/usage/agents/model.mdx
@@ -1,6 +1,10 @@
 ---
 title: LLM Guide
-description: Explore the capabilities of ChatGPT models from gpt-3.5-turbo to gpt-4-32k, understanding their speed, context limits, and cost. Learn about model parameters like temperature and top-p for better output.
+description: >-
+  Explore the capabilities of ChatGPT models from gpt-3.5-turbo to gpt-4-32k,
+  understanding their speed, context limits, and cost. Learn about model
+  parameters like temperature and top-p for better output.
+tags: 'Language Models, Model Parameters, GPT-3.5, GPT-4, Text Generation'
 ---
 
 # Model Guide
