--- a/docs/usage/agents/model.zh-CN.mdx
+++ b/docs/usage/agents/model.zh-CN.mdx
@@ -1,3 +1,12 @@
+---
+title: ChatGPT 模型指南 - 参数概念与使用建议
+description: >-
+  了解 ChatGPT 模型的不同版本和参数概念，包括 temperature、top_p、presence_penalty 和
+  frequency_penalty，以及它们的使用建议。
+tags: >-
+  ChatGPT, 模型指南, 参数概念, 使用建议, temperature, top_p, presence_penalty,
+  frequency_penalty
+---
 # 模型指南
 
 ## ChatGPT
