--- a/docs/usage/agents/prompt.mdx
+++ b/docs/usage/agents/prompt.mdx
@@ -1,3 +1,11 @@
+---
+title: Guide to Writing Well-Structured Prompts for Generative AI
+description: >-
+  Learn how to write clear, structured, and effective prompts for guiding
+  generative AI to produce high-quality output. Understand the importance of
+  specific formatting and content instructions in prompts.
+tags: 'writing prompts, generative AI, structured prompts, prompt effectiveness'
+---
 # Guide to Using Prompts
 
 ## Basic Concepts of Prompts
