--- a/docs/usage/agents/prompt.zh-CN.mdx
+++ b/docs/usage/agents/prompt.zh-CN.mdx
@@ -1,3 +1,8 @@
+---
+title: 如何写好一个结构化 prompt
+description: 了解如何撰写结构化 prompt，以指导生成式 AI 生成更准确、更有针对性的输出。
+tags: 'prompt, 结构化prompt, 生成式AI, 指导AI输出, 撰写prompt'
+---
 # Prompt 使用指南
 
 ## Prompt 基本概念
