--- a/docs/usage/agents/topics.zh-CN.mdx
+++ b/docs/usage/agents/topics.zh-CN.mdx
@@ -1,3 +1,8 @@
+---
+title: 话题使用指南 - 保存对话上下文，快速切换历史记录
+description: 了解如何在聊天过程中保存话题上下文并快速切换历史记录，以便轻松继续对话。
+tags: '话题使用指南, 保存话题, 话题列表, 对话记录, 快速切换'
+---
 # 话题使用指南
 
 <Image alt={'话题使用指南'} borderless cover src={'https://github-production-user-asset-6210df.s3.amazonaws.com/17870709/279602496-fd72037a-735e-4cc2-aa56-2994bceaba81.png'} />
