--- a/docs/usage/features/agent-market.mdx
+++ b/docs/usage/features/agent-market.mdx
@@ -1,5 +1,13 @@
 ---
 title: Assistant Market
+description: >-
+  Explore a vibrant and innovative community of carefully designed assistants in
+  LobeChat's Assistant Market. Submit your own assistants and join a
+  collaborative space to contribute wisdom and share personally developed
+  assistants.
+tags: >-
+  LobeChat, Assistant Market, Community, Collaboration, Assistant Creation,
+  Innovation
 ---
 
 # Assistant Market
