--- a/docs/usage/features/mobile.mdx
+++ b/docs/usage/features/mobile.mdx
@@ -1,5 +1,12 @@
 ---
 title: Mobile Device Adaptation
+description: >-
+  Explore the enhanced mobile user experience for LobeChat, offering smoother
+  and more intuitive interactions. Share your feedback through GitHub Issues or
+  Pull Requests.
+tags: >-
+  Mobile Device Optimization, User Experience, LobeChat, Mobile Interaction,
+  Feedback
 ---
 
 # Mobile Device Adaptation
