--- a/docs/usage/features/more.mdx
+++ b/docs/usage/features/more.mdx
@@ -1,3 +1,12 @@
+---
+title: Enhance Your Experience with Our Design and Technical Capabilities
+description: >-
+  Discover the assurance of exquisite UI design, smooth conversation experience,
+  fast deployment, privacy, security, and custom domain support.
+tags: >-
+  UI Design, Conversation Experience, Fast Deployment, Privacy and Security,
+  Custom Domain
+---
 # More Features
 
 In addition to the above features, our design and technical capabilities will provide you with more assurance in usage:
