--- a/docs/usage/features/multi-ai-providers.mdx
+++ b/docs/usage/features/multi-ai-providers.mdx
@@ -1,5 +1,13 @@
 ---
 title: Multi AI Providers
+description: >-
+  Discover how LobeChat's support for multiple model service providers offers a
+  diverse selection of conversation models, including AWS Bedrock, Google AI
+  Gemini series, ChatGLM, and Moonshot AI, providing users with a wider range of
+  choices.
+tags: >-
+  Multi-Model Service Provider Support, AI Conversation Services, AWS Bedrock,
+  Google AI Gemini, ChatGLM, Moonshot AI, Local Model Support
 ---
 
 # Multi-Model Service Provider Support
