--- a/docs/usage/features/multi-ai-providers.zh-CN.mdx
+++ b/docs/usage/features/multi-ai-providers.zh-CN.mdx
@@ -1,3 +1,13 @@
+---
+title: LobeChat 多模型服务商支持 - 为用户提供更丰富和多样化的会话选择
+description: >-
+  LobeChat 在提供 AI 会话服务时拓展了对多种模型服务商的支持，包括 AWS Bedrock、Google AI、ChatGLM 和
+  Moonshot AI，以满足不同用户的需求，并计划支持更多模型服务商。此外，LobeChat
+  还支持本地模型的使用，让用户能够更灵活地使用自己的或第三方的模型。
+tags: >-
+  LobeChat, 多模型服务商支持, AI 会话服务, 模型服务商, AWS Bedrock, Google AI, ChatGLM, Moonshot
+  AI, 本地模型支持
+---
 # 多模型服务商支持
 
 <Image alt={'多模型服务商支持'} borderless cover src={'https://github.com/lobehub/lobe-chat/assets/28616219/b164bc54-8ba2-4c1e-b2f2-f4d7f7e7a551'} />
