--- a/docs/usage/features/plugin-system.mdx
+++ b/docs/usage/features/plugin-system.mdx
@@ -1,5 +1,12 @@
 ---
 title: Plugin System
+description: >-
+  Explore the diverse plugin ecosystem of LobeChat, empowering assistants with
+  real-time information, news aggregation, document search, image generation,
+  and interaction with third-party services.
+tags: >-
+  LobeChat Plugin Ecosystem, Assistant Functionality, Real-time Information,
+  News Aggregation, Document Search, Third-party Services
 ---
 
 # Plugin System
