--- a/docs/usage/features/plugin-system.zh-CN.mdx
+++ b/docs/usage/features/plugin-system.zh-CN.mdx
@@ -1,3 +1,10 @@
+---
+title: LobeChat 插件生态系统 - 功能扩展与开发资源
+description: >-
+  LobeChat 插件生态系统是 LobeChat
+  助手功能的重要扩展，提供实时信息获取和处理，扩展到快速检索文档、生成图片、获取各种平台数据等功能。了解更多插件开发资源和路线进展。
+tags: 'LobeChat, 插件生态系统, 插件开发, 开发资源, 功能扩展, 插件路线进展'
+---
 # 插件系统
 
 <Image
