--- a/docs/usage/features/pwa.mdx
+++ b/docs/usage/features/pwa.mdx
@@ -1,5 +1,12 @@
 ---
 title: Progressive Web Apps (PWA)
+description: >-
+  Experience a near-native app feel with LobeChat's Progressive Web App (PWA),
+  providing optimized user experience on desktop and mobile devices. Follow
+  simple steps to install LobeChat as a desktop app.
+tags: >-
+  Progressive Web App, PWA, LobeChat, Multi-Device Experience, Web Technology,
+  Seamless Experience
 ---
 
 # Progressive Web App (PWA)
