--- a/docs/usage/features/pwa.zh-CN.mdx
+++ b/docs/usage/features/pwa.zh-CN.mdx
@@ -1,3 +1,10 @@
+---
+title: 渐进式 Web 应用（PWA）- 提升用户体验的现代 Web 技术
+description: >-
+  LobeChat 采用渐进式 Web 应用（PWA）技术，提供桌面和移动设备上的高度优化用户体验，保持轻量级和高性能特点。了解如何将 LobeChat
+  添加为您的桌面应用。
+tags: '渐进式 Web 应用, PWA, LobeChat, 用户体验, 桌面应用, 移动设备'
+---
 # 渐进式 Web 应用（PWA）
 
 <Image alt={'渐进式 Web 应用（PWA）'} borderless cover src={'https://github.com/lobehub/lobe-chat/assets/28616219/ecc8364a-cfc4-4a3d-b6fd-68b2d9bc5f0d'} />
