--- a/docs/usage/features/text-to-image.mdx
+++ b/docs/usage/features/text-to-image.mdx
@@ -1,5 +1,12 @@
 ---
 title: Text to Image
+description: >-
+  Transform your ideas into images with LobeChat's Text to Image tool, powered
+  by AI technologies like DALL-E 3, MidJourney, and Pollinations. Experience a
+  private and immersive creative process.
+tags: >-
+  Text to Image Generation, LobeChat, AI-Powered Creative Tool, DALL-E 3,
+  MidJourney, Pollinations
 ---
 
 # Text to Image Generation
