--- a/docs/usage/features/text-to-image.zh-CN.mdx
+++ b/docs/usage/features/text-to-image.zh-CN.mdx
@@ -1,3 +1,10 @@
+---
+title: LobeChat 文生图 - 利用AI工具将想法转化为图像
+description: >-
+  LobeChat 现在支持文本到图片生成技术，让用户在与助手对话中直接调用文生图工具进行创作。利用DALL-E
+  3、MidJourney和Pollinations等AI工具的能力，助手们可以将你的想法转化为图像，让创造过程更私密和沉浸式。
+tags: 'LobeChat, 文生图, AI工具, 文本到图片生成, DALL-E 3, MidJourney, Pollinations'
+---
 # Text to Image 文生图
 
 <Image
