--- a/docs/usage/features/theme.mdx
+++ b/docs/usage/features/theme.mdx
@@ -1,5 +1,11 @@
 ---
 title: Custom Themes
+description: >-
+  Discover flexible and diverse theme modes, color customization options, and
+  intuitive settings for personalized user experiences in LobeChat.
+tags: >-
+  Custom Themes, Personalized Interface Design, Theme Modes, Color
+  Customization, User Experience, LobeChat
 ---
 
 # Custom Themes
