--- a/docs/usage/features/tts.mdx
+++ b/docs/usage/features/tts.mdx
@@ -1,5 +1,13 @@
 ---
 title: Speech Synthesis and Recognition (TTS & STT)
+description: >-
+  LobeChat supports Text-to-Speech (TTS) and Speech-to-Text (STT) technologies,
+  allowing users to interact with conversational agents through clear voice
+  output. Choose from a variety of high-quality voice options for personalized
+  communication experiences.
+tags: >-
+  LobeChat, TTS, STT, Text-to-Speech, Speech-to-Text, Voice Options,
+  Conversational Agents
 ---
 
 # TTS & STT Voice Conversation
