--- a/docs/usage/features/tts.zh-CN.mdx
+++ b/docs/usage/features/tts.zh-CN.mdx
@@ -1,3 +1,8 @@
+---
+title: LobeChat TTS & STT 语音会话 - 文字转语音与语音转文字技术
+description: LobeChat 支持文字转语音（TTS）和语音转文字（STT）技术，提供清晰的语音输出，用户可以选择多种声音，获得个性化的交流体验。
+tags: 'LobeChat, TTS, STT, 语音会话, 文字转语音, 语音转文字, 语音技朧, 语音合成'
+---
 # TTS & STT 语音会话
 
 <Image
