--- a/docs/usage/features/vision.mdx
+++ b/docs/usage/features/vision.mdx
@@ -1,5 +1,12 @@
 ---
 title: Vision Recognition
+description: >-
+  Experience intelligent and diverse chat scenarios with LobeChat's visual
+  recognition capabilities, enabling recognition of image content and engaging
+  in intelligent conversations based on them.
+tags: >-
+  LobeChat, Multimodal Interaction, Visual Recognition, Intelligent
+  Conversations
 ---
 
 # Model Vision Recognition
