--- a/docs/usage/plugins/custom-plugin.mdx
+++ b/docs/usage/plugins/custom-plugin.mdx
@@ -1,3 +1,10 @@
+---
+title: Custom Plugins - Install and Develop LobeChat Plugins
+description: >-
+  Learn how to install custom LobeChat plugins and develop your own plugins to
+  expand the capabilities of your AI assistant.
+tags: 'Custom Plugins, LobeChat, ChatGPT, Plugin Development'
+---
 # Custom Plugins
 
 ## Installing Custom Plugins
