--- a/docs/usage/plugins/development.mdx
+++ b/docs/usage/plugins/development.mdx
@@ -1,3 +1,13 @@
+---
+title: 'LobeChat Plugin Development Guide - Create, Add, and Test Custom Plugins'
+description: >-
+  Learn how to develop, add, and test custom plugins in LobeChat. Understand the
+  plugin composition, custom plugin workflow, local plugin development, plugin
+  deployment, and release.
+tags: >-
+  LobeChat, plugin development, custom plugins, plugin workflow, plugin
+  deployment, plugin release, plugin UI, plugin gateway, plugin manifest
+---
 # Plugin Development Guide
 
 ## Plugin Composition
