--- a/docs/usage/plugins/development.zh-CN.mdx
+++ b/docs/usage/plugins/development.zh-CN.mdx
@@ -1,3 +1,8 @@
+---
+title: LobeChat 插件开发指南 - 构成、自定义流程、本地开发、部署与发布
+description: 了解 LobeChat 插件的构成、自定义流程、本地开发、部署与发布，以及插件的添加和使用方式。欢迎贡献更多框架与语言的插件模板。
+tags: 'LobeChat, 插件开发, 自定义插件, 插件部署, 插件发布, 插件SDK, 插件模板, 插件网关'
+---
 # 插件开发指南
 
 ## 插件构成
