--- a/docs/usage/plugins/store.mdx
+++ b/docs/usage/plugins/store.mdx
@@ -1,3 +1,10 @@
+---
+title: LobeChat Plugin Store - Access and Install Plugins
+description: >-
+  Explore and install plugins directly in LobeChat's Plugin Store. Enhance your
+  experience with a variety of useful plugins.
+tags: 'LobeChat Plugin Store, Install Plugins, LobeChat Extensions'
+---
 # Plugin Store
 
 You can access the plugin store by going to `Extension Tools` -> `Plugin Store` in the session toolbar.
