--- a/docs/usage/plugins/store.zh-CN.mdx
+++ b/docs/usage/plugins/store.zh-CN.mdx
@@ -1,3 +1,8 @@
+---
+title: LobeChat插件商店 - 方便安装并使用插件
+description: 在LobeChat的插件商店中，您可以方便地浏览、安装并使用各种插件，为您的会话工具条增添更多功能。
+tags: 'LobeChat, 插件商店, 扩展工具, 会话工具条, 插件安装'
+---
 # 插件商店
 
 你可以在会话工具条中的 `扩展工具` -> `插件商店`，进入插件商店。
