--- a/docs/usage/providers/groq.mdx
+++ b/docs/usage/providers/groq.mdx
@@ -1,6 +1,14 @@
 ---
 title: Using Groq in LobeChat
-image: https://github.com/lobehub/lobe-chat/assets/34400653/cf368841-f8e6-4cc5-b81d-09f82ef0afd9
+description: >-
+  Integrate LobeChat with Groq Cloud to leverage Groq's technology and
+  accelerate the operation of large language models. Learn how to obtain
+  GroqCloud API keys and configure Groq in LobeChat for powerful performance.
+tags: >-
+  Groq, LobeChat, GroqCloud, AI solutions, Language Model, API Key, Configure
+  Groq
+image: >-
+  https://github.com/lobehub/lobe-chat/assets/34400653/cf368841-f8e6-4cc5-b81d-09f82ef0afd9
 ---
 
 import { Callout, Steps } from 'nextra/components';
