--- a/docs/usage/providers/groq.zh-CN.mdx
+++ b/docs/usage/providers/groq.zh-CN.mdx
@@ -1,6 +1,11 @@
 ---
 title: 在 LobeChat 中使用 Groq
-image: https://github.com/lobehub/lobe-chat/assets/34400653/cf368841-f8e6-4cc5-b81d-09f82ef0afd9
+description: >-
+  通过 LobeChat 与 Groq Cloud 的集成，你现在可以轻松地利用 Groq 的技术，在 LobeChat 中加速大语言模型的运行。获取
+  GroqCloud API Key，配置 Groq 服务商设置，选中一个 Groq 支持的模型，就可以在 LobeChat 中体验 Groq 强大的性能了。
+tags: 'Groq, LobeChat, 大语言模型, AI 解决方案, GroqCloud, API Key, 配置, 性能'
+image: >-
+  https://github.com/lobehub/lobe-chat/assets/34400653/cf368841-f8e6-4cc5-b81d-09f82ef0afd9
 ---
 
 # 在 LobeChat 中使用 Groq
