--- a/docs/usage/providers/ollama.zh-CN.mdx
+++ b/docs/usage/providers/ollama.zh-CN.mdx
@@ -1,6 +1,11 @@
 ---
 title: 在 LobeChat 中使用 Ollama
-image: https://github.com/lobehub/lobe-chat/assets/28616219/bb5b3611-3aa8-4ec7-a6dc-f35a13b34d81
+description: >-
+  学习如何在 LobeChat 中轻松使用 Ollama 提供的语言模型来增强你的应用，包括安装 Ollama、拉取模型到本地以及在 LobeChat
+  中使用本地模型。
+tags: 'LobeChat, Ollama, 本地运行大型语言模型, LLM, 语言模型, Ollama集成'
+image: >-
+  https://github.com/lobehub/lobe-chat/assets/28616219/bb5b3611-3aa8-4ec7-a6dc-f35a13b34d81
 ---
 
 # 在 LobeChat 中使用 Ollama
