--- a/docs/usage/providers/ollama/gemma.zh-CN.mdx
+++ b/docs/usage/providers/ollama/gemma.zh-CN.mdx
@@ -1,6 +1,11 @@
 ---
 title: 使用 Google Gemma 模型
-image: https://github.com/lobehub/lobe-chat/assets/28616219/817f5655-4f9e-414b-af9f-9ccc5410a06d
+description: >-
+  通过集成 Ollama 和 Google Gemma，你可以在 LobeChat 中轻松使用 Google Gemma 模型。本文将指导你如何在
+  LobeChat 中使用 Google Gemma 模型，包括本地安装 Ollama、拉取 Google Gemma 模型到本地以及选择 Gemma 模型。
+tags: 'LobeChat, Google Gemma, Ollama, 自然语言处理, 模型集成'
+image: >-
+  https://github.com/lobehub/lobe-chat/assets/28616219/817f5655-4f9e-414b-af9f-9ccc5410a06d
 ---
 
 # 使用 Google Gemma 模型
