--- a/docs/usage/start.mdx
+++ b/docs/usage/start.mdx
@@ -1,6 +1,14 @@
 ---
 title: Get Start
-image: https://github.com/lobehub/lobe-chat/assets/28616219/9be1a584-8b66-4bc4-ac96-14c4f94dc499
+description: >-
+  Explore Lobe Chat's features including Vision Model, TTS & STT, Local LLMs,
+  and Multi AI Providers. Experience mobile device adaptation, progressive web
+  app, and custom themes.
+tags: >-
+  Lobe Chat, Vision Model, TTS & STT, Local LLMs, Multi AI Providers, Mobile
+  Device Adaptation, Progressive Web App, Custom Themes
+image: >-
+  https://github.com/lobehub/lobe-chat/assets/28616219/9be1a584-8b66-4bc4-ac96-14c4f94dc499
 ---
 
 # ✨ Feature Overview
