--- a/docs/self-hosting/advanced/analytics.mdx
+++ b/docs/self-hosting/advanced/analytics.mdx
@@ -1,3 +1,10 @@
+---
+title: Integrating Vercel Analytics for LobeChat User Usage Analysis
+description: >-
+  Learn how to enable and utilize Vercel Analytics to collect website visit data
+  for LobeChat, including traffic, sources, and devices used for access.
+tags: 'Vercel Analytics, LobeChat, User Usage Analysis'
+---
 # Data Analysis
 
 To better help analyze the usage of LobeChat users, we have integrated several free/open-source data analytics services in LobeChat for collecting user usage data, which you can enable as needed.
