--- a/docs/self-hosting/advanced/authentication.mdx
+++ b/docs/self-hosting/advanced/authentication.mdx
@@ -1,3 +1,15 @@
+---
+title: Configuring External Identity Verification Services for LobeChat
+description: >-
+  Learn how to configure external identity verification services for centralized
+  user authorization within enterprises/organizations using Auth0 and Microsoft
+  Entra ID. Set up multiple identity verification sources simultaneously by
+  setting the SSO_PROVIDERS environment variable. Explore other SSO providers
+  through NextAuth.js documentation.
+tags: >-
+  Identity Verification Services, SSO Providers, Auth0, Microsoft Entra ID,
+  NextAuth.js
+---
 # Identity Verification Service
 
 LobeChat supports the configuration of external identity verification services for internal use within enterprises/organizations to centrally manage user authorization.
