--- a/docs/self-hosting/advanced/sso-providers/auth0.zh-CN.mdx
+++ b/docs/self-hosting/advanced/sso-providers/auth0.zh-CN.mdx
@@ -1,3 +1,8 @@
+---
+title: 配置 Auth0 身份验证服务 - 创建应用、新增用户和环境变量配置
+description: 学习如何在 Auth0 中创建应用、新增用户以及配置环境变量，以便在部署 LobeChat 时启用身份认证和单点登录。
+tags: 'Auth0, 身份验证, 单点登录, 环境变量配置, LobeChat'
+---
 # 配置 Auth0 身份验证服务
 
 <Steps>
