--- a/docs/self-hosting/advanced/sso-providers/microsoft-entra-id.zh-CN.mdx
+++ b/docs/self-hosting/advanced/sso-providers/microsoft-entra-id.zh-CN.mdx
@@ -1,3 +1,10 @@
+---
+title: 配置 Microsoft Entra ID 身份验证服务 - 快速注册应用指导
+description: >-
+  学习如何配置 Microsoft Entra ID 身份验证服务，包括创建应用、新增用户、配置环境变量，以及进阶配置。部署成功后，用户将可以使用
+  Microsoft Entra ID 中配置的用户通过身份认证并使用 LobeChat。
+tags: 'Microsoft Entra ID, 身份验证服务, 快速注册应用指导'
+---
 # 配置 Microsoft Entra ID 身份验证服务
 
 ## Microsoft Entra ID 配置流程
