--- a/docs/self-hosting/environment-variables.zh-CN.mdx
+++ b/docs/self-hosting/environment-variables.zh-CN.mdx
@@ -1,3 +1,8 @@
+---
+title: LobeChat 环境变量 - 自定义配置
+description: 了解如何使用环境变量自定义配置 LobeChat 部署，提供额外的设置选项。
+tags: 'LobeChat, 环境变量, 自定义配置, 部署, 模型服务商'
+---
 # 环境变量
 
 LobeChat 在部署时提供了一些额外的配置项，你可以使用环境变量进行自定义设置。
