--- a/docs/self-hosting/environment-variables/basic.zh-CN.mdx
+++ b/docs/self-hosting/environment-variables/basic.zh-CN.mdx
@@ -1,3 +1,8 @@
+---
+title: LobeChat 环境变量配置 - 自定义设置和身份验证服务
+description: 了解如何使用环境变量自定义 LobeChat 部署配置，包括访问密码、单点登录、basePath 等设置，以及身份验证服务的配置。
+tags: 'LobeChat, 环境变量, 身份验证服务, 单点登录, 插件服务, 助手市场'
+---
 # 环境变量
 
 LobeChat 在部署时提供了一些额外的配置项，你可以使用环境变量进行自定义设置。
