--- a/docs/self-hosting/environment-variables/model-provider.zh-CN.mdx
+++ b/docs/self-hosting/environment-variables/model-provider.zh-CN.mdx
@@ -1,3 +1,14 @@
+---
+title: LobeChat 模型服务商环境变量配置指南
+description: >-
+  了解如何配置 LobeChat 模型服务商环境变量，包括 OpenAI、Azure OpenAI、智谱 AI、Moonshot AI、Google
+  AI、AWS Bedrock、Ollama、Perplexity AI、Anthropic AI、Mistral AI、Groq AI 和
+  OpenRouter AI。
+tags: >-
+  LobeChat, 模型服务商, 环境变量, OpenAI, Azure OpenAI, 智谱 AI, Moonshot AI, Google AI,
+  AWS Bedrock, Ollama, Perplexity AI, Anthropic AI, Mistral AI, Groq AI,
+  OpenRouter AI
+---
 # 模型服务商
 
 LobeChat 在部署时提供了丰富的模型服务商相关的环境变量，你可以使用这些环境变量轻松定义需要在 LobeChat 中开启的模型服务商。
