--- a/docs/self-hosting/examples/azure-openai.zh-CN.mdx
+++ b/docs/self-hosting/examples/azure-openai.zh-CN.mdx
@@ -1,3 +1,8 @@
+---
+title: LobeChat 使用 Azure OpenAI 配置指南
+description: 本文介绍了如何在 LobeChat 中配置 Azure OpenAI 作为模型服务商，包括界面中配置和部署时配置。
+tags: 'LobeChat, Azure OpenAI, 配置指南, 模型服务商, API密钥, Azure API地址, 环境变量配置'
+---
 # 与 Azure OpenAI 集成使用
 
 LobeChat 支持使用 [Azure OpenAI][azure-openai-url] 作为 OpenAI 的模型服务商，本文将介绍如何配置 Azure OpenAI。
