--- a/docs/self-hosting/examples/ollama.zh-CN.mdx
+++ b/docs/self-hosting/examples/ollama.zh-CN.mdx
@@ -1,3 +1,8 @@
+---
+title: LobeChat 与 Ollama集成指南
+description: 学习如何在LobeChat中配置和部署Ollama，以便轻松使用Ollama提供的语言模型来增强你的应用。
+tags: 'Ollama集成, LobeChat, 本地启动Ollama, 本地运行LobeChat, Docker命令行'
+---
 # 与 Ollama 集成
 
 Ollama 是一款强大的本地运行大型语言模型（LLM）的框架，支持多种语言模型，包括 Llama 2, Mistral 等。现在，LobeChat 已经支持与 Ollama 的集成，这意味着你可以在 LobeChat 中轻松使用 Ollama 提供的语言模型来增强你的应用。
