--- a/docs/self-hosting/platform/docker.zh-CN.mdx
+++ b/docs/self-hosting/platform/docker.zh-CN.mdx
@@ -1,3 +1,10 @@
+---
+title: Docker 部署指引 - LobeChat 服务部署
+description: >-
+  学习如何使用 Docker 镜像在私有设备上部署 LobeChat 服务，包括安装 Docker 容器环境、使用 Docker 指令部署、使用代理地址以及
+  Crontab 自动更新脚本。
+tags: 'Docker, LobeChat, 部署指引, 私有设备, 环境变量, 代理地址, Crontab, 自动更新'
+---
 # Docker 部署指引
 
 <div style={{display:"flex", gap: 4}}>
