--- a/docs/self-hosting/platform/netlify.zh-CN.mdx
+++ b/docs/self-hosting/platform/netlify.zh-CN.mdx
@@ -1,3 +1,10 @@
+---
+title: 在 Netlify 上部署 LobeChat：详细步骤及环境配置
+description: >-
+  学习如何在 Netlify 上部署 LobeChat，包括 Fork 仓库、准备 OpenAI API Key、导入到 Netlify
+  工作台、配置站点名称与环境变量等详细步骤。
+tags: 'Netlify, LobeChat, 部署, OpenAI, API Key, 环境配置, 自定义域名'
+---
 # 使用 Netlify 部署
 
 如果想在 Netlify 上部署 LobeChat，可以按照以下步骤进行操作：
