--- a/docs/self-hosting/platform/zeabur.mdx
+++ b/docs/self-hosting/platform/zeabur.mdx
@@ -1,3 +1,11 @@
+---
+title: Deploy LobeChat on Zeabur - Step-by-Step Guide
+description: >-
+  Learn how to deploy LobeChat on Zeabur with ease. Get your OpenAI API Key,
+  click the deploy button, and start using LobeChat. Optional: Bind a custom
+  domain for direct connections in most regions.
+tags: 'Deploy LobeChat, Zeabur Deployment, OpenAI API Key, Custom Domain Binding'
+---
 # Deploy LobeChat with Zeabur
 
 If you want to deploy LobeChat on Zeabur, you can follow the steps below:
