--- a/docs/self-hosting/platform/zeabur.zh-CN.mdx
+++ b/docs/self-hosting/platform/zeabur.zh-CN.mdx
@@ -1,3 +1,8 @@
+---
+title: 在Zeabur上部署LobeChat - 使用OpenAI API Key进行快速部署
+description: 按照以下步骤在Zeabur上部署LobeChat，准备OpenAI API Key并点击按钮进行部署，快速开始使用。可选绑定自定义域名。
+tags: 'Zeabur, LobeChat, OpenAI API Key, 自定义域名, 快速部署'
+---
 # 使用 Zeabur 部署
 
 如果想在 Zeabur 上部署 LobeChat，可以按照以下步骤进行操作：
