--- a/docs/usage/agents/topics.mdx
+++ b/docs/usage/agents/topics.mdx
@@ -1,3 +1,12 @@
+---
+title: Topic Usage Guide
+description: >-
+  Learn how to save and manage topics during conversations, including saving,
+  switching, pinning, renaming, and deleting topics.
+tags: >-
+  Topic Usage, Conversation Management, Save Topic, Topic List, Historical
+  Records, Pin Topics, Rename Topics, Delete Topics
+---
 # Topic Usage Guide
 
 <Image alt={'Topic Usage Guide'} borderless cover src={'https://github-production-user-asset-6210df.s3.amazonaws.com/17870709/279602496-fd72037a-735e-4cc2-aa56-2994bceaba81.png'} />
