--- a/docs/usage/features/agent-market.zh-CN.mdx
+++ b/docs/usage/features/agent-market.zh-CN.mdx
@@ -1,3 +1,10 @@
+---
+title: LobeChat 助手市场 - 创新助手社区
+description: >-
+  LobeChat
+  助手市场是一个充满活力和创新的社区，汇聚了众多精心设计的助手，为工作场景和学习提供极大便利。欢迎创作者提交助手作品，共同创造更多有趣、实用且具有创新性的助手。
+tags: 'LobeChat, 助手市场, 创作者社区, 助手设计, 自动化国际化, 多语言助手, 生态系统, 助手迭代'
+---
 # 助手市场
 
 <Image
