--- a/docs/usage/features/local-llm.mdx
+++ b/docs/usage/features/local-llm.mdx
@@ -1,6 +1,14 @@
 ---
 title: Local LLM
-image: https://github.com/lobehub/lobe-chat/assets/28616219/8292b22e-1f4f-478b-b510-32c7883c1c6d
+description: >-
+  Experience groundbreaking Ollama AI support for local LLM in LobeChat. Start
+  conversations effortlessly with a local LLM using Docker deployment. Enjoy
+  unprecedented interaction speed and enhanced privacy with local processing.
+tags: >-
+  Ollama AI, Local Large Language Model, LLM, LobeChat, AI communication, Docker
+  deployment
+image: >-
+  https://github.com/lobehub/lobe-chat/assets/28616219/8292b22e-1f4f-478b-b510-32c7883c1c6d
 ---
 
 # Local Large Language Model (LLM) Support
