--- a/docs/usage/features/vision.zh-CN.mdx
+++ b/docs/usage/features/vision.zh-CN.mdx
@@ -1,3 +1,8 @@
+---
+title: LobeChat 多模态交互：视觉识别能力赋能智能对话
+description: LobeChat 已支持多款具有视觉识别能力的大语言模型，用户可上传或拖拽图片至对话框，助手将识别图片内容并展开智能对话，构建更智能、多元化的聊天场景。
+tags: 'LobeChat, 多模态交互, 视觉识别, 智能对话, 大语言模型, 图片识别'
+---
 # 模型视觉识别
 
 <Image
