--- a/docs/usage/plugins/basic-usage.mdx
+++ b/docs/usage/plugins/basic-usage.mdx
@@ -1,3 +1,12 @@
+---
+title: 'LobeChat Plugin System: Enhance Your Assistant''s Capabilities'
+description: >-
+  Learn how to use LobeChat plugins to expand your assistant's abilities and
+  access the Plugin Store for easy installation.
+tags: >-
+  LobeChat, Plugin System, Extension Tools, Plugin Store, Using Plugins, Plugin
+  Configuration
+---
 # Plugin Usage
 
 The plugin system is a key element in expanding the capabilities of assistants in LobeChat. You can enhance the assistant's abilities by enabling a variety of plugins.
