--- a/docs/usage/plugins/basic-usage.zh-CN.mdx
+++ b/docs/usage/plugins/basic-usage.zh-CN.mdx
@@ -1,3 +1,8 @@
+---
+title: LobeChat 插件使用指南
+description: 了解如何在 LobeChat 中使用插件，包括插件商店的浏览、安装和配置，以及如何启用和使用已安装的插件。
+tags: 'LobeChat, 插件使用, 插件商店, 插件配置, 助手扩展, 会话工具条'
+---
 # 插件使用
 
 插件体系是 LobeChat 中扩展助理的能力的关键要素，你可以通过为助手启用各式各样的插件来增强助手的各项能力。
