--- a/docs/usage/providers/ollama.mdx
+++ b/docs/usage/providers/ollama.mdx
@@ -1,6 +1,12 @@
 ---
 title: Using Ollama in LobeChat
-image: https://github.com/lobehub/lobe-chat/assets/28616219/bb5b3611-3aa8-4ec7-a6dc-f35a13b34d81
+description: >-
+  Learn how to integrate Ollama with LobeChat to use powerful local language
+  models (LLMs) such as Llama 2 and Mistral. Install Ollama, pull models
+  locally, and start conversing with the local LLM in LobeChat.
+tags: 'Ollama, LobeChat, Local Language Models, LLM Integration, Ollama Configuration'
+image: >-
+  https://github.com/lobehub/lobe-chat/assets/28616219/bb5b3611-3aa8-4ec7-a6dc-f35a13b34d81
 ---
 
 # Using Ollama in LobeChat
