--- a/docs/usage/providers/ollama/gemma.mdx
+++ b/docs/usage/providers/ollama/gemma.mdx
@@ -1,6 +1,13 @@
 ---
 title: Using Google Gemma Model
-image: https://github.com/lobehub/lobe-chat/assets/28616219/817f5655-4f9e-414b-af9f-9ccc5410a06d
+description: >-
+  Learn how to integrate and use Google Gemma in LobeChat with Ollama, enabling
+  local conversations with the Gemma model.
+tags: >-
+  Google Gemma, LobeChat, Ollama, Natural Language Processing, Local Model
+  Integration
+image: >-
+  https://github.com/lobehub/lobe-chat/assets/28616219/817f5655-4f9e-414b-af9f-9ccc5410a06d
 ---
 
 # Using Google Gemma Model
