--- a/docs/usage/start.zh-CN.mdx
+++ b/docs/usage/start.zh-CN.mdx
@@ -1,6 +1,11 @@
 ---
 title: 开始使用
-image: https://github.com/lobehub/lobe-chat/assets/28616219/9be1a584-8b66-4bc4-ac96-14c4f94dc499
+description: LobeChat 功能特性一览，包括视觉识别、语音会话、多 AI 服务商等，提供助手市场、本地大语言模型、插件系统等体验特性。
+tags: >-
+  LobeChat, 功能特性, 视觉识别, 语音会话, 多 AI 服务商, 助手市场, 本地大语言模型, 插件系统, 移动设备适配, 渐进式 Web 应用,
+  自定义主题
+image: >-
+  https://github.com/lobehub/lobe-chat/assets/28616219/9be1a584-8b66-4bc4-ac96-14c4f94dc499
 ---
 
 # ✨ LobeChat 功能特性一览
