📝 docs: Update mdx docs seo

--- a/docs/self-hosting/start.zh-CN.mdx
+++ b/docs/self-hosting/start.zh-CN.mdx
@@ -3,6 +3,7 @@ title: 选择适合自己的部署平台 | 构建属于自己的 Lobe Chat
 description: 选择适合自己的部署平台，包括 Vercel、Docker 和 Docker Compose 等，进行 Lobe Chat 的部署。
 tags: 'Lobe Chat, 部署平台, Vercel, Docker, Docker Compose'
 ---
+
 # 构建属于自己的 Lobe Chat
 
 选择自己喜爱的平台，构建属于自己的 Lobe Chat。
@@ -11,12 +12,4 @@ tags: 'Lobe Chat, 部署平台, Vercel, Docker, Docker Compose'
 
 LobeChat 支持多种部署平台，包括 Vercel、Docker 和 Docker Compose 等，你可以选择适合自己的部署平台进行部署。
 
-<PlatformCards
-  docker={'Docker 部署'}
-  dockerCompose={'Docker Compose 部署'}
-  netlify={'Netlify 部署'}
-  repocloud={'Repocloud 部署'}
-  sealos={'SealOS 部署'}
-  vercel={'Vercel 部署'}
-  zeabur={'Zeabur 部署'}
-/>
+<PlatformCards docker={'Docker 部署'} dockerCompose={'Docker Compose 部署'} netlify={'Netlify 部署'} repocloud={'Repocloud 部署'} sealos={'SealOS 部署'} vercel={'Vercel 部署'} zeabur={'Zeabur 部署'} />
