--- a/docs/usage/features/tts.mdx
+++ b/docs/usage/features/tts.mdx
@@ -27,11 +27,7 @@ In LobeChat, we have carefully selected a series of high-quality voice options (
 
 ## Lobe TTS
 
-<Image
-  alt={'LobeTTS @lobehub/tts'}
-  borderless
-  src={'https://github.com/lobehub/lobe-chat/assets/28616219/52d20fdc-48c0-45e4-9c51-ee150fc18be7'}
-/>
+<Image alt={'LobeTTS @lobehub/tts'} borderless src={'https://github.com/lobehub/lobe-chat/assets/28616219/52d20fdc-48c0-45e4-9c51-ee150fc18be7'} />
 
 [`@lobehub/tts`](https://tts.lobehub.com) is a high-quality TTS toolkit developed using the TS language, supporting usage in both server and browser environments.
 
