--- a/docs/usage/features/tts.zh-CN.mdx
+++ b/docs/usage/features/tts.zh-CN.mdx
@@ -3,6 +3,7 @@ title: LobeChat TTS & STT 语音会话 - 文字转语音与语音转文字技术
 description: LobeChat 支持文字转语音（TTS）和语音转文字（STT）技术，提供清晰的语音输出，用户可以选择多种声音，获得个性化的交流体验。
 tags: 'LobeChat, TTS, STT, 语音会话, 文字转语音, 语音转文字, 语音技朧, 语音合成'
 ---
+
 # TTS & STT 语音会话
 
 <Image
@@ -20,11 +21,7 @@ LobeChat 支持文字转语音（Text-to-Speech，TTS）和语音转文字（Spe
 
 ## Lobe TTS
 
-<Image
-  alt={'LobeTTS @lobehub/tts'}
-  borderless
-  src={'https://github.com/lobehub/lobe-chat/assets/28616219/52d20fdc-48c0-45e4-9c51-ee150fc18be7'}
-/>
+<Image alt={'LobeTTS @lobehub/tts'} borderless src={'https://github.com/lobehub/lobe-chat/assets/28616219/52d20fdc-48c0-45e4-9c51-ee150fc18be7'} />
 
 [`@lobehub/tts`](https://tts.lobehub.com) 是一个使用 TS 语言开发的，高质量 TTS 工具包，支持在服务端和浏览器中使用。
 
