--- a/docs/usage/start.mdx
+++ b/docs/usage/start.mdx
@@ -24,20 +24,8 @@ image: >-
   width={832}
 />
 
-<FeatureCards
-  agentMarket={'Assistant Market'}
-  localLLM={'Local LLM'}
-  pluginSystem={'Plugin System'}
-  providers="Multi AI Providers"
-  textToImage={'Text-to-Image'}
-  tts={'TTS & STT'}
-  vision={'Visual Recognition'}
-/>
+<FeatureCards agentMarket={'Assistant Market'} localLLM={'Local LLM'} pluginSystem={'Plugin System'} providers="Multi AI Providers" textToImage={'Text-to-Image'} tts={'TTS & STT'} vision={'Visual Recognition'} />
 
 ## Experience Features
 
-<ExperienceCards
-  mobile={'Mobile Device Adaptation'}
-  pwa={'Progressive Web App'}
-  theme={'Custom Themes'}
-/>
+<ExperienceCards mobile={'Mobile Device Adaptation'} pwa={'Progressive Web App'} theme={'Custom Themes'} />
