--- a/docs/usage/start.zh-CN.mdx
+++ b/docs/usage/start.zh-CN.mdx
@@ -10,24 +10,9 @@ image: >-
 
 # ✨ LobeChat 功能特性一览
 
-<Image
-  alt={'视觉感知 / 语音会话 / 多 AI 服务商 / 本地LLM /  助手市场 / 插件系统 / 私人定制'}
-  borderless
-  height={426}
-  margin={12}
-  src={'https://github.com/lobehub/lobe-chat/assets/28616219/8b04c3c9-3d71-4fb4-bd9b-a4f415c5876d'}
-  width={832}
-/>
+<Image alt={'视觉感知 / 语音会话 / 多 AI 服务商 / 本地LLM /  助手市场 / 插件系统 / 私人定制'} borderless height={426} margin={12} src={'https://github.com/lobehub/lobe-chat/assets/28616219/8b04c3c9-3d71-4fb4-bd9b-a4f415c5876d'} width={832} />
 
-<FeatureCards
-  agentMarket={'助手市场'}
-  localLLM={'本地大语言模型'}
-  pluginSystem={'插件系统'}
-  providers="多模型服务商"
-  textToImage={'文生图'}
-  tts={'TTS & STT'}
-  vision={'视觉识别'}
-/>
+<FeatureCards agentMarket={'助手市场'} localLLM={'本地大语言模型'} pluginSystem={'插件系统'} providers="多模型服务商" textToImage={'文生图'} tts={'TTS & STT'} vision={'视觉识别'} />
 
 ## 体验特性
 
