--- a/docs/usage/providers/ollama/qwen-local.mdx
+++ b/docs/usage/providers/ollama/qwen-local.mdx
@@ -4,9 +4,13 @@ title: Using the Local Qwen Model
 
 # Using the Local Qwen Model
 
-[Qwen](https://github.com/QwenLM/Qwen1.5) is a large language model (LLM) open-sourced by Alibaba Cloud. It is officially defined as a constantly evolving AI large model, and it achieves more accurate Chinese recognition capabilities through more training set content. Now, through the integration of LobeChat and [Ollama](https://ollama.com/), you can easily use Qwen in LobeChat.
+<Image alt={'Using Qwen in LobeChat'} cover src={'https://github.com/lobehub/lobe-chat/assets/28616219/7a5fd01a-9fed-49c1-93a3-422269213f19'} />
 
-This document will guide you on how to use the local deployment version of Qwen in LobeChat:
+[Qwen](https://github.com/QwenLM/Qwen1.5) is a large language model (LLM) open-sourced by Alibaba Cloud. It is officially defined as a constantly evolving AI large model, and it achieves more accurate Chinese recognition capabilities through more training set content.
+
+<Video src="https://github.com/lobehub/lobe-chat/assets/28616219/31e5f625-8dc4-4a5f-a5fd-d28d0457782d" />
+
+Now, through the integration of LobeChat and [Ollama](https://ollama.com/), you can easily use Qwen in LobeChat. This document will guide you on how to use the local deployment version of Qwen in LobeChat:
 
 <Steps>
   ## Local Installation of Ollama
@@ -21,16 +25,18 @@ This document will guide you on how to use the local deployment version of Qwen 
   ollama pull qwen:14b
   ```
   <Callout type={'info'}>
-    The local version of Qwen provides different model sizes to choose from. Please refer to the [Qwen's Ollama integration page](https://ollama.com/library/qwen) to understand how to choose the model size.
+    The local version of Qwen provides different model sizes to choose from. Please refer to the
+    [Qwen's Ollama integration page](https://ollama.com/library/qwen) to understand how to choose the
+    model size.
   </Callout>
 
-  <Image alt={'Use Ollama Pull Qwen Model'} height={473} inStep src={''} width={791} />
+  <Image alt={'Use Ollama Pull Qwen Model'} height={473} inStep src={'https://github.com/lobehub/lobe-chat/assets/1845053/fe34fdfe-c2e4-4d6a-84d7-4ebc61b2516a'} />
 
   ### Select the Qwen Model
 
   In the LobeChat conversation page, open the model selection panel, and then select the Qwen model.
 
-  <Image alt={'Choose Qwen Model'} height={629} inStep src={''} width={791} />
+  <Image alt={'Choose Qwen Model'} height={430} inStep src={'https://github.com/lobehub/lobe-chat/assets/28616219/e0608cca-f62f-414a-bc55-28a61ba21f14'} />
 
   <Callout type={'info'}>
     If you do not see the Ollama provider in the model selection panel, please refer to [Integration with Ollama](/en/self-hosting/examples/ollama) to learn how to enable the Ollama provider in LobeChat.
