📝 docs: update docs

--- a/docs/usage/providers/ollama/qwen.mdx
+++ b/docs/usage/providers/ollama/qwen.mdx
@@ -1,5 +1,6 @@
 ---
 title: Using the Local Qwen Model
+image: https://github.com/lobehub/lobe-chat/assets/28616219/689e19ea-3003-4e15-a1d5-b7343d5ba898
 ---
 
 # Using the Local Qwen Model
