--- a/docs/usage/providers/ollama/qwen.zh-CN.mdx
+++ b/docs/usage/providers/ollama/qwen.zh-CN.mdx
@@ -1,5 +1,6 @@
 ---
 title: 使用本地通义千问 Qwen 模型
+image: https://github.com/lobehub/lobe-chat/assets/28616219/689e19ea-3003-4e15-a1d5-b7343d5ba898
 ---
 
 # 使用本地通义千问 Qwen 模型
