--- a/locales/zh-CN/setting.json
+++ b/locales/zh-CN/setting.json
@@ -4,7 +4,7 @@
   },
   "analytics": {
     "telemetry": {
-      "desc": "通过选择发送遥测数据，你可以帮助我们改善 LobeChat 整体用户体验",
+      "desc": "通过选择发送遥测数据，你可以帮助我们改善 ChatHwBaby 整体用户体验",
       "title": "发送匿名使用数据"
     },
     "title": "数据统计"
