🌐 chore: add bg-BG common

--- a/locales/bg-BG/common.json
+++ b/locales/bg-BG/common.json
@@ -59,8 +59,8 @@
   },
   "lang": {
     "ar": "Арабски",
+    "bg-BG": "български",
     "bn": "Бенгалски",
-    "bg_BG": "Български",
     "cs-CZ": "Чешки",
     "da-DK": "Датски",
     "de-DE": "Немски",
