add docs basic github url

--- a/docs/self-hosting/environment-variables/basic.mdx
+++ b/docs/self-hosting/environment-variables/basic.mdx
@@ -227,3 +227,4 @@ The above example sets the `SERPAPI_API_KEY` of the `search-engine` plugin to `x
 - Default: `https://chat-agents.lobehub.com`
 
 [auth0-client-page]: https://manage.auth0.com/dashboard
+[github-client-page]: https://github.com/settings/apps
